# ddelivery

./: Cargo.toml  README.md
src/: defaults.rs  mail_sender.rs  main.rs  main_receiver.rs  main_sender.rs  smtp.rs  smtp_server.rs
